[gd_scene load_steps=16 format=2]

[ext_resource path="res://pieces/content_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ui/pieces/line_Popup.gd" type="Script" id=2]
[ext_resource path="res://pieces/_lineedit_bg.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.968627, 0.105882, 0.635294, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.0862745 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_detail = 20

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/JosefinSans-Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 18
use_mipmaps = true
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.0862745 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.972549, 0.356863, 0.737255, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=9]
content_margin_top = 5.0
bg_color = Color( 0.96875, 0.261108, 0.698825, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.968627, 0.243137, 0.690196, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="DynamicFontData" id=11]
font_path = "res://fonts/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=12]
size = 18
use_mipmaps = true
use_filter = true
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=7]
use_mipmaps = true
use_filter = true
font_data = SubResource( 6 )

[node name="line_Popup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.0
margin_top = -71.5
margin_right = 230.0
margin_bottom = 71.5
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel"]
anchor_right = 1.0
margin_bottom = 27.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="Panel/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -8.5
margin_right = 39.0
margin_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 4 )
text = "Warning!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shadow" type="Panel" parent="Panel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = 6.0
margin_bottom = 6.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -37.0
margin_right = 102.0
margin_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes_button" parent="Panel/HBoxContainer" instance=ExtResource( 1 )]
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
text = "YES"
my_url = "true"

[node name="no_button" parent="Panel/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 110.0
margin_right = 210.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
text = "NO"
my_url = "false"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -30.5
margin_right = 159.0
margin_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="response_text" type="Label" parent="Panel/VBoxContainer"]
margin_right = 319.0
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Text Goes Here!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 29.0
margin_right = 319.0
margin_bottom = 54.0
alignment = 1

[node name="line_entry" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 34.0
margin_right = 284.0
rect_min_size = Vector2( 250, 0 )
[connection signal="menu_button_pressed" from="Panel/HBoxContainer/yes_button" to="." method="_on_yes_button_menu_button_pressed"]
[connection signal="menu_button_pressed" from="Panel/HBoxContainer/no_button" to="." method="_on_no_button_menu_button_pressed"]
